--- a/src/main/resources/com/example/emirates/seatselection.css
+++ b/src/main/resources/com/example/emirates/seatselection.css
@@ -222,25 +222,25 @@
     -fx-text-fill: #27ae60;
 }
 .progress-indicator {
-    -fx-background-color: transparent; /* Main container background */
-    -fx-border-color: transparent; /* Border of the main container */
-    -fx-padding: 0; /* Padding around the spinner */
+    -fx-background-color: transparent; 
+    -fx-border-color: transparent; 
+    -fx-padding: 0; 
 }
 
-/* Style for the spinner's container */
+
 .progress-indicator .spinner-pane {
-    -fx-background-color: transparent; /* Spinner pane background */
+    -fx-background-color: transparent; 
 }
 
-/* Style for the arc of the progress indicator */
+
 .progress-indicator .spinner {
-    -fx-background-color: transparent; /* Spinner arc background */
+    -fx-background-color: transparent; 
     -fx-border-color: transparent;
     -fx-progress-color: #D71920;
 }
 
 
-/* Remove any potential shadows */
+
 .progress-indicator .spinner-pane,
 .progress-indicator .spinner {
     -fx-effect: null;
